<resources>
    <string name="app_name">Meal</string>
    <string name="desc_load">Loading</string>

    <string name="nav_home">首页</string>
    <string name="nav_report">报表</string>
    <string name="nav_order">订单</string>
    <string name="nav_my">我的</string>
    <string name="nav_about">关于</string>

    <string name="btn_confirm">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_share">分享</string>
    <string name="btn_login">登陆</string>
    <string name="btn_location">定位</string>
    <string name="btn_log">日志</string>
    <string name="btn_logout">退出</string>
    <string name="btn_close">关闭</string>


    <string name="lb_user">用户</string>
    <string name="lb_pad">密码</string>
    <string name="lb_userHint">请输入用户名称</string>
    <string name="lb_padHint">请输入用户密码</string>
</resources>
