<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selector_stroke_radiu"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingTop="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/titleBottom"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/text20" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/subBottom"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/ask_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/desc_load"
        android:textAlignment="center"
        android:textSize="@dimen/text18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ask_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_stroke_cancel"
            android:padding="10dp"
            android:text="@string/btn_cancel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@drawable/selector_fore_while"
            android:textSize="@dimen/text16" />

        <TextView
            android:id="@+id/ask_conferma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_stroke_confirm"
            android:padding="10dp"
            android:text="@string/btn_confirm"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@drawable/selector_fore_while"
            android:textSize="@dimen/text16" />
    </LinearLayout>

</LinearLayout>