<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    android:paddingTop="2dp"
    android:paddingRight="5dp"
    android:paddingBottom="2dp">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="27dp"
        android:paddingTop="3dp"
        android:paddingRight="27dp"
        android:paddingBottom="3dp">

        <ImageView
            android:id="@+id/line1_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/line1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/nav_home"
            android:textAlignment="center"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/text14" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="27dp"
        android:paddingTop="3dp"
        android:paddingRight="27dp"
        android:paddingBottom="3dp">

        <ImageView
            android:id="@+id/line2_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:src="@drawable/ic_report" />

        <TextView
            android:id="@+id/line2_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/nav_report"
            android:textAlignment="center"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/text14" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="27dp"
        android:paddingTop="3dp"
        android:paddingRight="27dp"
        android:paddingBottom="3dp">

        <ImageView
            android:id="@+id/line3_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:src="@drawable/ic_order" />

        <TextView
            android:id="@+id/line3_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/nav_order"
            android:textAlignment="center"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/text14" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="27dp"
        android:paddingTop="3dp"
        android:paddingRight="27dp"
        android:paddingBottom="3dp">

        <ImageView
            android:id="@+id/line4_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:src="@drawable/ic_my" />

        <TextView
            android:id="@+id/line4_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/nav_my"
            android:textAlignment="center"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/text14" />
    </LinearLayout>

</LinearLayout>